--- a/type-graphql-tutorial/package.json
+++ b/type-graphql-tutorial/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/nodemailer": "^6.4.0",
+    "@types/uuid": "^7.0.2",
     "apollo-server-express": "^2.3.1",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.11.1",
@@ -13,10 +15,12 @@
     "express-session": "^1.17.0",
     "graphql": "^14.0.2",
     "ioredis": "^4.16.0",
+    "nodemailer": "^6.4.6",
     "pg": "^7.7.1",
     "reflect-metadata": "^0.1.12",
     "type-graphql": "^0.17.6",
-    "typeorm": "^0.2.11"
+    "typeorm": "^0.2.11",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
