--- a/type-graphql-tutorial/package.json
+++ b/type-graphql-tutorial/package.json
@@ -37,6 +37,7 @@
     "typescript": "^3.2.2"
   },
   "scripts": {
+    "setup": "ts-node src/scripts/setup.ts",
     "start": "ts-node-dev --no-notify --respawn src/index.ts"
   }
 }
