--- a/type-graphql-tutorial/package.json
+++ b/type-graphql-tutorial/package.json
@@ -17,6 +17,7 @@
     "ioredis": "^4.16.0",
     "nodemailer": "^6.4.6",
     "pg": "^7.7.1",
+    "prettier": "^2.0.2",
     "reflect-metadata": "^0.1.12",
     "type-graphql": "^0.17.6",
     "typeorm": "^0.2.11",
@@ -31,13 +32,21 @@
     "@types/graphql": "^14.0.4",
     "@types/ioredis": "^4.14.9",
     "@types/node": "^10.12.18",
+    "husky": "^4.2.3",
     "nodemon": "^1.18.9",
+    "pretty-quick": "^2.0.1",
     "ts-node": "^7.0.1",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.2.2"
   },
   "scripts": {
+    "format": "prettier --write \"./**/*.{js,ts,json}\"",
     "setup": "ts-node src/scripts/setup.ts",
     "start": "ts-node-dev --no-notify --respawn src/index.ts"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
