--- a/type-graphql-tutorial/package.json
+++ b/type-graphql-tutorial/package.json
@@ -31,10 +31,12 @@
     "@types/express-session": "^1.17.0",
     "@types/graphql": "^14.0.4",
     "@types/ioredis": "^4.14.9",
+    "@types/jest": "^25.1.4",
     "@types/node": "^10.12.18",
     "husky": "^4.2.3",
     "nodemon": "^1.18.9",
     "pretty-quick": "^2.0.1",
+    "ts-jest": "^25.3.0",
     "ts-node": "^7.0.1",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.2.2"
@@ -42,7 +44,9 @@
   "scripts": {
     "format": "prettier --write \"./**/*.{js,ts,json}\"",
     "setup": "ts-node src/scripts/setup.ts",
-    "start": "ts-node-dev --no-notify --respawn src/index.ts"
+    "start": "ts-node-dev --no-notify --respawn src/index.ts",
+    "db:setup": "ts-node src/test-utils/setup.ts",
+    "test": "npm run db:setup && jest"
   },
   "husky": {
     "hooks": {
