--- a/type-graphql-tutorial/package.json
+++ b/type-graphql-tutorial/package.json
@@ -29,11 +29,14 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.3",
     "@types/express-session": "^1.17.0",
+    "@types/faker": "^4.1.11",
     "@types/graphql": "^14.0.4",
     "@types/ioredis": "^4.14.9",
     "@types/jest": "^25.1.4",
     "@types/node": "^10.12.18",
+    "faker": "^4.1.0",
     "husky": "^4.2.3",
+    "jest": "^25.2.4",
     "nodemon": "^1.18.9",
     "pretty-quick": "^2.0.1",
     "ts-jest": "^25.3.0",
@@ -46,7 +49,7 @@
     "setup": "ts-node src/scripts/setup.ts",
     "start": "ts-node-dev --no-notify --respawn src/index.ts",
     "db:setup": "ts-node src/test-utils/setup.ts",
-    "test": "npm run db:setup && jest"
+    "test": "npm run db:setup && jest --detectOpenHandles"
   },
   "husky": {
     "hooks": {
