--- a/type-graphql-tutorial/package.json
+++ b/type-graphql-tutorial/package.json
@@ -8,6 +8,7 @@
     "@types/uuid": "^7.0.2",
     "apollo-server-express": "^2.3.1",
     "bcryptjs": "^2.4.3",
+    "chalk": "^4.0.0",
     "class-validator": "^0.11.1",
     "connect-redis": "^4.0.4",
     "cors": "^2.8.5",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/chalk": "^2.2.0",
     "@types/connect-redis": "0.0.13",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.3",
