--- a/type-graphql-tutorial/package.json
+++ b/type-graphql-tutorial/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "express-session": "^1.17.0",
     "graphql": "^14.0.2",
+    "graphql-query-complexity": "^0.4.1",
     "ioredis": "^4.16.0",
     "nodemailer": "^6.4.6",
     "pg": "^7.7.1",
