--- a/next-typescript-tutorial/package.json
+++ b/next-typescript-tutorial/package.json
@@ -8,12 +8,20 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.7",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
+    "cookie": "^0.4.0",
+    "graphql": "^15.0.0",
     "isomorphic-unfetch": "3.0.0",
     "next": "latest",
     "react": "^16.12.0",
+    "react-apollo": "^3.1.4",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "@types/cookie": "^0.3.3",
+    "@types/graphql": "^14.5.0",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
